<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="@dimen/globalPadding8"
    tools:context=".activities.GraabyBusinessConfirmationActivity">

    <LinearLayout
        android:id="@+id/summary_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingBottom="@dimen/globalPadding8">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/globalPadding8"
                    android:text="@string/summary_billed_amount"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/concrete" />

                <TextView
                    android:id="@+id/tv_billed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/orange"
                    android:textIsSelectable="false"
                    android:textSize="@dimen/summary_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/globalPadding8"
                    android:text="@string/summary_graaby_discount"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/concrete" />

                <TextView
                    android:id="@+id/tv_total_discount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/holo_darkyellow"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/globalPadding8"
            android:background="@color/holo_darkgreen"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/globalPadding8"
            android:paddingTop="@dimen/globalPadding8">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/globalPadding8"
                android:text="@string/summary_total"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/holo_lightgreen" />

            <TextView
                android:id="@+id/tv_net_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/readable_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_billed_coupons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/globalPadding8"
            android:paddingLeft="@dimen/globalPadding8"
            android:paddingRight="@dimen/globalPadding8"
            android:paddingStart="@dimen/globalPadding8"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tv_billed_vouchers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/globalPadding8"
            android:paddingLeft="@dimen/globalPadding8"
            android:paddingRight="@dimen/globalPadding8"
            android:paddingStart="@dimen/globalPadding8"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/business_authentication_text"
            android:textSize="@dimen/readable_text_size" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:indeterminate="false"
            android:max="@integer/authentication_countdown_timer"
            android:progress="0"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView"
            android:layout_alignTop="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tv_tries_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/tries_left"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/bill_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:hint="enter bill number" />


    </RelativeLayout>
</LinearLayout>
